tests/ui/test_unknown_visibility.stderr
error: expected literal
 --> $DIR/test_unknown_visibility.rs:4:24
  |
4 | #[shorthand(visibility(garbage))]
  |                        ^^^^^^^
